--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,29 @@
 version: '3.8'
 
 services:
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: sundaygraph-frontend
+    ports:
+      - "3000:3000"
+    environment:
+      - NEXT_PUBLIC_API_URL=http://sundaygraph:8000
+      - NODE_ENV=production
+    depends_on:
+      sundaygraph:
+        condition: service_healthy
+    networks:
+      - sundaygraph-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000', (r) => process.exit(r.statusCode === 200 ? 0 : 1)).on('error', () => process.exit(1))"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s
+
   sundaygraph:
     build:
       context: .
@@ -12,12 +35,16 @@ services:
       - ./config:/app/config:ro
       - ./data:/app/data
       - ./logs:/app/logs
+    env_file:
+      - .env
     environment:
       - PYTHONUNBUFFERED=1
       - LOG_LEVEL=INFO
       - OPENAI_API_KEY=${OPENAI_API_KEY:-}
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY:-}
     depends_on:
+      postgres:
+        condition: service_healthy
       neo4j:
         condition: service_healthy
     networks:
@@ -29,6 +56,27 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+
+  postgres:
+    image: postgres:15-alpine
+    container_name: sundaygraph-postgres
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_DB=sundaygraph
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=password
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    networks:
+      - sundaygraph-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
   neo4j:
     image: neo4j:5.15-community
@@ -58,6 +106,8 @@ services:
       start_period: 30s
 
 volumes:
+  postgres-data:
+    driver: local
   neo4j-data:
     driver: local
   neo4j-logs:
