--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,11 @@ data/
 *.db
 *.sqlite
 
+# Environment variables
+.env
+.env.local
+.env.*.local
+
 # Configuration (if contains secrets)
 config/local.yaml
 config/secrets.yaml
