--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,11 @@ dependencies = [
     "click>=8.1.7",
     "fastapi>=0.104.0",
     "uvicorn[standard]>=0.24.0",
+    "psycopg2-binary>=2.9.9",
+    "sqlalchemy>=2.0.0",
+    "openai>=1.6.0",
+    "python-multipart>=0.0.6",
+    "requests>=2.32.5",
 ]
 
 [project.optional-dependencies]
@@ -77,12 +82,3 @@ target-version = "py310"
 testpaths = ["tests"]
 python_files = ["test_*.py"]
 asyncio_mode = "auto"
-
-[tool.uv]
-dev-dependencies = [
-    "pytest>=7.4.3",
-    "pytest-asyncio>=0.21.1",
-    "black>=23.12.0",
-    "mypy>=1.7.0",
-    "ruff>=0.1.8",
-]
