--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,8 +27,9 @@ dependencies = [
     "pyyaml>=6.0.1",
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
-    "neo4j>=5.15.0",
     "networkx>=3.2.1",
+    "sparqlwrapper>=2.0.0",
+    "rdflib>=7.0.0",
     "spacy>=3.7.0",
     "nltk>=3.8.1",
     "pandas>=2.1.0",
